--- a/views/stock_view.xml
+++ b/views/stock_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<odoo>xlrd
+<odoo>
     <data>
 
     <record id="import_stock_inventory_wizard_view" model="ir.ui.view">
@@ -35,12 +35,12 @@
         <field name="view_mode">form</field>
         <field name="target">new</field>
     </record>
-    
+
    <menuitem action="import_stock_inventory_wizard"
         name="Import Stock Inventory"
         id="import_stock_inventory_action"
-        parent="stock.menu_stock_inventory_control"
-        groups="pways_import_stock_inventory.group_import_inventory_access"
+        parent="stock.menu_stock_inventory_control" 
+        groups="pways_import_stock_inventory.group_import_inventory_access" 
         sequence="31"
     />
 
